--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/log-update": "^3.1.0",
-    "@types/mongodb": "^4.0.7",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.35",
     "@types/uuid": "^8.3.4",
@@ -28,7 +27,6 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@ef-carbon/tspm": "^2.2.5",
     "@tus/s3-store": "^1.0.0-beta.6",
     "@tus/server": "^1.0.0-beta.6",
     "@typegoose/typegoose": "^11.2.0",
@@ -39,6 +37,7 @@
     "cli-progress": "^3.11.2",
     "clone": "^2.1.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.0.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
@@ -46,7 +45,6 @@
     "express-validator": "^6.15.0",
     "gravatar": "^1.8.2",
     "i": "^0.3.7",
-    "mongodb": "^4.13.0",
     "mongoose": "^7.2.0",
     "npm": "^8.18.0",
     "passport": "^0.6.0",
