--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "tsc && npm run postbuild",
+    "compile": "tsc",
     "starttest": "set DATABASE=mongodb://127.0.0.1:27017/unilocked && npm run compile && node build/index.js",
     "start": "npm run compile && node build/index.js",
     "postbuild": "ef-tspm"
