--- a/compose.yaml
+++ b/compose.yaml
@@ -13,3 +13,7 @@ services:
     image: mongodb/mongodb-community-server:6.0-ubi8
     ports:
       - "27017:27017"
+    volumes:
+      - mongodb_data_container:/data/db
+volumes:
+ mongodb_data_container:
