--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.17.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
+    "file-system-cache": "^2.4.4",
     "gravatar": "^1.8.2",
     "i": "^0.3.7",
     "mongoose": "^7.6.1",
