--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tus/s3-store": "^1.0.0-beta.6",
     "@tus/server": "^1.0.0-beta.6",
     "@typegoose/typegoose": "^11.6.0",
+    "@types/express-useragent": "^1.0.5",
     "axios": "^0.27.2",
     "b2-cloud-storage": "^1.0.5",
     "backblaze-b2": "^1.7.0",
@@ -42,6 +43,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
     "express-session": "^1.17.3",
+    "express-useragent": "^1.0.15",
     "express-validator": "^6.15.0",
     "file-system-cache": "^2.4.4",
     "gravatar": "^1.8.2",
