--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/passport-local": "^1.0.35",
     "@types/uuid": "^8.3.4",
     "log-update": "^5.0.1",
-    "typescript": "^4.5.4"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@tus/s3-store": "^1.0.0-beta.6",
@@ -42,6 +42,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
+    "express-partials": "^0.3.0",
     "express-session": "^1.17.3",
     "express-useragent": "^1.0.15",
     "express-validator": "^6.15.0",
@@ -49,12 +50,14 @@
     "gravatar": "^1.8.2",
     "i": "^0.3.7",
     "mongoose": "^7.6.1",
+    "mongoose-autopopulate": "^1.1.0",
     "npm": "^10.2.0",
     "passport": "^0.6.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "redis": "^4.6.5",
     "slugify": "^1.6.5",
-    "socket.io": "^4.6.1",
+    "socket.io": "^4.7.2",
     "uuid": "^8.3.2"
   }
 }
