--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@socket.io/cluster-adapter": "^0.2.2",
+    "@socket.io/redis-adapter": "^8.2.1",
     "@socket.io/sticky": "^1.0.4",
     "@tus/s3-store": "^1.0.0-beta.6",
     "@tus/server": "^1.0.0-beta.6",
