--- a/package.json
+++ b/package.json
@@ -43,18 +43,22 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "crypto": "^1.0.1",
+    "date-fns": "^3.2.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.17.2",
     "express-partials": "^0.3.0",
     "express-session": "^1.17.3",
     "express-useragent": "^1.0.15",
     "express-validator": "^6.15.0",
     "file-system-cache": "^2.4.4",
+    "form-data": "^4.0.0",
     "gravatar": "^1.8.2",
     "i": "^0.3.7",
     "mongoose": "^7.6.1",
     "mongoose-autopopulate": "^1.1.0",
-    "npm": "^10.2.0",
+    "nodemailer": "^6.9.8",
+    "npm": "^10.3.0",
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
